fix twitter card

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,5 +10,6 @@
   {%- endif -%}
 
   <!-- Social previews -->
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:image" content="{{ "/assets/images/data-visualization_carlos_muza.jpg" | relative_url }}">
 </head>
